<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CoffeeOrderApp</string>
    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank you!</string>
    <string name="name_of_customer">Enter your name here</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>


    <string name="order_summary_name">Name : <xliff:g id="name" example="Apoorv">%s</xliff:g></string>
</resources>