<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.justjava.MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_customer"
            android:inputType="textCapWords"
            android:id="@+id/name"/>


        <TextView
            android:id="@+id/textViewtoppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:text="@string/toppings"
            style="@style/CustomText" />

        <CheckBox
            android:id="@+id/whipped_cream"
            android:layout_marginLeft="12dp"
            android:paddingLeft="24dp"
            android:text="@string/whippedCream"
            style="@style/HeaderTextStyle" />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_marginLeft="12dp"
            android:paddingLeft="24dp"
            style="@style/HeaderTextStyle"
            android:text="@string/chocolate" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="12dp"
            android:padding="16dp"
            android:text="@string/quantity"
            style="@style/CustomText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/decrement"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:onClick="decrement"
                android:padding="16dp"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/increment"
                android:layout_width="48dp"
                android:layout_height="48dp"

                android:onClick="increment"
                android:padding="8dp"
                android:text="+" />

        </LinearLayout>






        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="ORDER" />

    </LinearLayout>
</ScrollView>
